src/app/common/components/emoji-picker/emoji-picker.component.scss
@import 'defaults.scss';

m-emojiPicker {
  text-align: left !important;

  .emoji-mart-emoji,
  .emoji-mart-emoji span {
    cursor: pointer !important;
  }

  .ngxp__container {
    border: none;
    padding: 0;
    z-index: 5;

    .ngxp__arrow:before {
      @include m-theme() {
        background-color: themed($m-borderColor--primary);
      }
    }

    .emoji-mart:not(.emoji-mart-dark) {
      border: none;
    }
  }

  /*
 * Dark mode styles
 */
  .emoji-mart-dark {
    @include m-theme() {
      color: themed($m-textColor--primary);
      border-color: themed($m-borderColor--primary);
      background-color: themed($m-bgColor--primary);
    }
  }

  .emoji-mart-dark .emoji-mart-bar {
    @include m-theme() {
      border-color: themed($m-borderColor--primary);
    }
  }

  .emoji-mart-dark .emoji-mart-search input {
    @include m-theme() {
      color: themed($m-textColor--primary);
      border-color: themed($m-borderColor--primary);
      background-color: themed($m-bgColor--secondary);
    }
  }

  .emoji-mart-dark .emoji-mart-category .emoji-mart-emoji:hover:before {
    @include m-theme() {
      background-color: themed($m-bgColor--secondary);
    }
  }

  .emoji-mart-dark .emoji-mart-category-label span {
    @include m-theme() {
      color: themed($m-textColor--primary);
      background-color: themed($m-bgColor--primary);
    }
  }

  .emoji-mart-dark .emoji-mart-skin-swatches {
    @include m-theme() {
      border-color: themed($m-borderColor--primary);
      background-color: themed($m-bgColor--secondary);
    }
  }

  .emoji-mart-search input {
    padding: 5px 25px 5px 10px;
  }

  .emoji-mart-search-icon {
    top: 6px;
  }

  .emoji-mart-preview {
    height: 50px;

    .emoji-mart-title-label {
      font-size: 16px;
    }

    .emoji-mart-preview-emoji .emoji-mart-emoji > span {
      font-size: 30px !important;
    }

    .emoji-mart-preview-shortname {
      display: none;
    }
  }
}

.m-emojiPicker__icon {
  cursor: pointer;
  transition: opacity 0.3s;

  @include m-theme() {
    color: themed($m-textColor--secondary);
  }

  &:hover {
    opacity: 0.7;
  }
}

